--- a/gocd/web1live.yaml
+++ b/gocd/web1live.yaml
@@ -18,6 +18,11 @@ pipelines:
             build:
               tasks:
                 - exec:
+                  run_if: passed
+                  command: make
+                  arguments:
+                    - checkout_to_release
+                - exec:
                     run_if: passed
                     command: make
                     arguments:
