Made stylistic rubocop corrections and updated namespaces in .rubocop.yml

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,22 +8,22 @@ Metrics/AbcSize:
 Style/Documentation:
   Enabled: false
 
-Style/SpaceBeforeFirstArg:
+Layout/SpaceBeforeFirstArg:
   Enabled: false
 
 Style/BracesAroundHashParameters:
   Enabled: false
 
-Style/IndentHash:
+Layout/IndentHash:
   EnforcedStyle: consistent
 
-Style/AlignHash:
+Layout/AlignHash:
   Severity: fatal
   Enabled: true
   EnforcedHashRocketStyle: table
   EnforcedColonStyle: table
 
-Style/AlignParameters:
+Layout/AlignParameters:
   EnforcedStyle: with_fixed_indentation
 
 Style/StringLiterals:
@@ -37,13 +37,13 @@ Style/CollectionMethods:
     detect: 'find'
     find_all: 'select'
 
-Style/DotPosition:
+Layout/DotPosition:
   EnforcedStyle: leading
 
 Style/DoubleNegation:
   Enabled: false
 
-Style/SpaceAroundOperators:
+Layout/SpaceAroundOperators:
   # When true, allows most uses of extra spacing if the intent is to align
   # with an operator on the previous or next line, not counting empty lines
   # or comment lines.
