--- a/gocd/web1live.yaml
+++ b/gocd/web1live.yaml
@@ -57,6 +57,11 @@ pipelines:
                     command: make
                     arguments:
                       - airbrake
+                - exec:
+                    run_if: any
+                    command: make
+                    arguments:
+                      - rmi
 
 
 
