--- a/gocd/pdswebops.yaml
+++ b/gocd/pdswebops.yaml
@@ -3,7 +3,7 @@ pipelines:
     group: main
     label_template: "${COUNT}"
     environment_variables:
-      ASSET_LOCATION_URL: https://s3-eu-west-1.amazonaws.com/web1live.pugin-website
+      ASSET_LOCATION_URL: https://static.parliament.uk/pugin
       STATIC_ASSET_LOCATION_URL: https://s3-eu-west-1.amazonaws.com/web1live.static-assets
       RACK_ENV: development
     materials:
